--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,40 +1,42 @@
 <!-- form -->
 <section id="register mt-5">
-    <div class="wrapper mt-5">
-        <div class="row">
-            <div class="col-12">
-                <div class="row">
-                    <div class="col-5 m-auto">
-                        <div class="text-center">
-                            <h3>Sign Up</h3>
-                            <p class="feature_main_para">Register for free, your information is save with us.</p>
-                            <p class="d-sm-none">Register for free.</p>
+    <div class="wrapper mt-4">
+        <div class="row w-100">
+            <div class="col-12 m-auto">
+                <div class="text-center mb-4">
+                    <h3>Sign Up</h3>
+                    <p class="feature_main_para">Register for free, your information is save with us.</p>
+                    <p class="d-sm-none">Register for free.</p>
+                    <div class="oauth_container">
+                        <div class="oauth facebook">
+                            <a href="/auth/google" class="btn">Facebook</a>
+                        </div>
+                        <div class="oauth google">
+                            <a href="/auth/google" class="btn">Google</a>
                         </div>
                     </div>
-                    <div class="col-12">
-                        <div class="row">
-                            <div class="col-3 m-auto">
-                                <form action="/register" method="POST">
-                                    <div class="form-row">
-                                        <div class="form-group col-12">
-                                            <input type="text" class="form-control" placeholder="Full Name">
-                                        </div>
-                                        <div class="form-group col-12">
-                                            <input type="email" class="form-control" placeholder="Email">
-                                        </div>
-                                        <div class="form-group col-12">
-                                            <input type="password" class="form-control" placeholder="Password">
-                                        </div>
-                                        <div class="form-group col-12">
-                                            <input type="password" class="form-control" placeholder="Confirm Password">
-                                        </div>
-                                    </div>
-                                    <button type="submit" class="btn btn-primary">Sign in</button>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
+                    <h5>or</h5>
                 </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-8 m-auto">
+                <form action="/register" method="POST" class="text-center">
+                    <div class="form-row">
+                        <div class="form-group col-12">
+                            <input type="text" class="form-control" placeholder="Enter full name">
+                        </div>
+                        <div class="form-group col-12">
+                            <input type="email" class="form-control" placeholder="Email">
+                        </div>
+                        <div class="form-group col-12">
+                            <input type="password" class="form-control" placeholder="Password">
+                        </div>
+                        <div class="form-group col-12">
+                            <input type="password" class="form-control" placeholder="Confirm Password">
+                        </div>
+                    </div>
+                    <p>Already have account? <a href="/login">Log in</a></p>
+                    <button type="submit" class="btn user_btn ml-auto">Sign Up</button>
+                </form>
             </div>
         </div>
     </div>
