--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
         <nav class="navbar navbar-expand-lg navbar-light navActive">
             {{/if}}
             <div class="container">
-                <a class="navbar-brand" href="/">FriendsBook</a>
+                <a class="navbar-brand" href="#">FriendsBook</a>
                 <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -39,7 +39,7 @@
                         <li><a class="nav-item nav-link" href="#">Feature</a></li>
                         <li><a class="nav-item nav-link" href="#">Pricing</a></li>
                         <li><a class="nav-item nav-link" href="#">Pages</a></li>
-                        <li><a class="nav-item user_btn" href="#">Login</a></li>
+                        <li><a class="nav-item user_btn" href="/login">Login</a></li>
                     </ul>
                 </div>
             </div>
@@ -62,7 +62,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="row">
-                                <div class="col-sm-4 col-6">
+                                <div class="col-4">
                                     <h6>Company</h6>
                                     <ul>
                                         <li>About us</li>
@@ -71,7 +71,7 @@
                                         <li>Partners</li>
                                     </ul>
                                 </div>
-                                <div class="col-sm-4 col-6">
+                                <div class="col-4">
                                     <h6>Blog</h6>
                                     <ul>
                                         <li>Finance</li>
@@ -79,7 +79,7 @@
                                         <li>Mobile</li>
                                     </ul>
                                 </div>
-                                <div class="col-sm-4 col-6">
+                                <div class="col-4">
                                     <h6>Integrations</h6>
                                     <ul>
                                         <li>Android App</li>
