--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,9 +4,9 @@
         <div class="row m-auto">
             <div class="col-12 m-auto">
                 <div class="text-center mb-4">
-                    <h3>Register</h3>
-                    <p class="feature_main_para">Register for free, your information is save with us.</p>
-                    <p class="d-sm-none">Register for free.</p>
+                    <h3>Login</h3>
+                    <p class="feature_main_para">Login with you preference, your information is save with us.</p>
+                    <p class="d-sm-none">Login with you preference.</p>
                     <div class="oauth_container">
                         <div class="oauth facebook">
                             <a href="/auth/google" class="btn">Facebook</a>
@@ -19,23 +19,18 @@
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6 col-8 m-auto">
-                <form action="/register" method="POST" class="text-center">
+                <form action="/login" method="POST" class="text-center">
                     <div class="form-row">
-                        <div class="form-group col-12">
-                            <input type="text" class="form-control" placeholder="Enter full name">
-                        </div>
                         <div class="form-group col-12">
                             <input type="email" class="form-control" placeholder="Email">
                         </div>
                         <div class="form-group col-12">
                             <input type="password" class="form-control" placeholder="Password">
                         </div>
-                        <div class="form-group col-12">
-                            <input type="password" class="form-control" placeholder="Confirm Password">
-                        </div>
                     </div>
-                    <p>Already have account? <a href="/login">Log in</a></p>
-                    <button type="submit" class="btn user_btn ml-auto">Sign Up</button>
+                    <p class="d-inline-block float-left"><a href="/forgot">Forgot Password?</a></p>
+                    <p class="d-inline-block float-right"><a href="/register">Create a new account</a></p>
+                    <button type="submit" class="btn user_btn ml-auto">Login</button>
                 </form>
             </div>
         </div>
